Reordered backend dockerfile, correctly setting envvar
Turns out providing it during build time does not persist it during
runtime. I think I knew that, but here we are.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,10 +3,10 @@ FROM node:19-alpine
 WORKDIR /app
 
 COPY . .
+RUN npm install
 
 ARG APPID
-
-RUN npm install
+ENV APPID=${APPID:-null}
 
 EXPOSE 9000
 
