Added volume mounts to the docker compose
Now, as requested, the docker containers have their source directories
mounted to the disk, allowing the developers to do hot code edits,
causing on-demand rebuilds. At least of the backend. I am less sure
about the frontend.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         - wapp-backend
     ports:
       - "9000:9000"
+    volumes:
+      - "../backend/src:/app/src"
   frontend:
     build:
       context: ../frontend
@@ -17,3 +19,5 @@ services:
         - wapp-frontend
     ports:
       - "8000:8000"
+    volumes:
+      - "../frontend/src:/app/src"
