--- a/ansible/templates/docker-compose.yml
+++ b/ansible/templates/docker-compose.yml
@@ -2,17 +2,11 @@
 version: "3.9"
 services:
   backend:
-    build:
-      context: ../backend
-      tags:
-        - wapp-backend
+    image: wapp-backend
     ports:
       - "9000:9000"
   frontend:
-    build:
-      context: ../frontend
-      tags:
-        - wapp-frontend
+    image: wapp-frontend
     ports:
       - "8000:8000"
     environment:
